# Transmute

./: .gitignore  Cargo.toml  PROJECT_REPORT.md  README.md  download_models.sh  improvement.txt  rust-toolchain.toml  transmute.desktop
.cargo/: config.toml
android/: build-rust.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/transmute/: MainActivity.kt  TransmuteLib.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
bench/: main  main.rs
crates/transmute-cli/: Cargo.toml  README.md  build.rs
crates/transmute-cli/src/: cli.rs  config.rs  lib.rs  main.rs  output.rs  progress.rs
crates/transmute-common/: Cargo.toml
crates/transmute-common/src/: error.rs  format.rs  gpu.rs  lib.rs  path.rs
crates/transmute-compress/: Cargo.toml
crates/transmute-compress/benches/: compression_benchmark.rs
crates/transmute-compress/src/: compressor.rs  gpu_convert.rs  lib.rs  quality.rs
crates/transmute-core/: Cargo.toml
crates/transmute-core/benches/: conversion_benchmark.rs  pdf_benchmark.rs
crates/transmute-core/src/: batch.rs  converter.rs  gpu.rs  lib.rs
crates/transmute-formats/: Cargo.toml
crates/transmute-formats/benches/: pdf_generation_bench.rs
crates/transmute-formats/src/: decoder.rs  encoder.rs  lib.rs  metadata.rs  pdf.rs
crates/transmute-gui/: Cargo.toml  build.rs
crates/transmute-gui/src/: app.rs  lib.rs  main.rs  preview.rs  state.rs  theme.rs  widgets.rs
crates/transmute-integration-tests/: Cargo.toml  README.md
crates/transmute-integration-tests/src/: lib.rs
crates/transmute-integration-tests/tests/: compression_test.rs  integration_test.rs  nlp_pdf_test.rs  nlp_test.rs  pdf_conversion_test.rs
crates/transmute-jni/: Cargo.toml
crates/transmute-jni/src/: lib.rs
crates/transmute-nlp/: Cargo.toml
crates/transmute-nlp/src/: grammar.pest  intent.rs  lib.rs  parser.rs  path_resolver.rs
docs/: android.md  configuration.md  gpu-acceleration.md  installation.md  usage-cli.md  usage-gui.md
examples/: profiling_example.sh
gpu-shaders/: rgb_to_ycbcr.wgsl
