[workspace]
resolver = "2"
members = [
    "crates/transmute-common",
    "crates/transmute-formats",
    "crates/transmute-core",
    "crates/transmute-integration-tests", "crates/transmute-compress",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["PsychoPunkSage"]

[workspace.dependencies]
# Core utilities
num_cpus = "1.17.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp"] }
rayon = "1.10"

# GPU infrastructure
wgpu = { version = "27.0.1", features = ["wgsl"] }
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"

# File I/O
memmap2 = "0.9"
directories = "6.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
chrono = "0.4"

# Testing
criterion = { version = "0.8", features = ["html_reports"] }

# PDF Support
printpdf = { version = "0.8", features = ["png"] } # PDF Generation with PNG support
lopdf = "0.38" # low level PDF Manipulation
pdfium-render = "0.8" # GPU accelerated-rasterization

# Async batch processing
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# Compression libraries
oxipng = "9.1" # PNG Optimization
mozjpeg = "0.10" # high-quality JPEG encoding (better than image crate's default)
webp = "0.3" # for modern compression

# GPU compute
naga = "23.0" # validates WGSL shaders at compile time

# workspace crates
transmute-core = { path = "crates/transmute-core" }
transmute-common = { path = "crates/transmute-common" }
transmute-formats = { path = "crates/transmute-formats" }
transmute-compress = { path = "crates/transmute-compress" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
