[package]
name = "transmute-common"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid.workspace = true
image.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
wgpu.workspace = true
pollster.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.24"
