[package]
name = "transmute-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "transmute-common/gpu"]

[dependencies]
transmute-common.workspace = true

image.workspace = true
tracing.workspace = true
thiserror.workspace = true

# GPU (optional — disabled for Android builds)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
futures.workspace = true

# Compression
webp.workspace = true
oxipng.workspace = true
mozjpeg.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.13"

[[bench]]
name = "compression_benchmark"
harness = false
