[package]
name = "transmute-core"
version = "0.1.0"
edition = "2024"

[dependencies]
transmute-common.workspace = true
transmute-formats.workspace = true

image.workspace = true
rayon.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true

# GPU
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.13"

[[bench]]
name = "conversion_benchmark"
path = "benches/conversion_benchmark.rs"
harness = false
