[package]
name = "transmute-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
image.workspace = true
lopdf.workspace = true
tracing.workspace = true
memmap2.workspace = true
printpdf.workspace = true
thiserror.workspace = true

transmute-common.workspace = true

[dev-dependencies]
tempfile = "3.13"

# Not for Browser (wasm32 arch) Builds
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdfium-render.workspace = true
