[package]
name = "transmute-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
transmute-common.workspace = true
transmute-core.workspace = true
transmute-formats.workspace = true
image.workspace = true
tokio.workspace = true
tempfile = "3.14"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
