[package]
name = "transmute-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
transmute-common = { workspace = true, features = ["default"] }
transmute-core.workspace = true
transmute-compress = { workspace = true, features = ["default"] }
transmute-formats = { workspace = true, features = ["default"] }
transmute-nlp.workspace = true
image.workspace = true
tokio.workspace = true
tempfile = "3.14"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
