[package]
name = "transmute-nlp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
transmute-common.workspace = true
transmute-compress.workspace = true

glob.workspace = true
pest.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
pest_derive.workspace = true
shellexpand.workspace = true

[dev-dependencies]
tempfile = "3.13"
